<resources>
    <string name="app_name">MannajobAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complA">의도적으로 게시물을 도배</string>
    <string name="complB">상관없는 게시물이나 광고 등록</string>
    <string name="complC">무단으로 매칭 파기</string>
    <string name="complD">매칭에서 과도한 금품이나 보상 요구</string>
    <string name="complE">직접 입력</string>


    <string name="request_cancel">게시판 매칭 취소</string>
    <string name="like">좋아요</string>
    <string name="dislike">싫어요</string>
    <string name="kakao_app_key">85e2c35ae155997b4ce3a96cdbfd5853</string>

    <string name="agree1">제1조 목적
본 약관은 만나JOB 관련제반 서비스의 이용과 관련하여 “회사”와 회원의 권리, 의무 및 책임사항 기타 필요한 사항을 규정함을 목적으로 합니다.

제2조 용어의 정의
본 약관에서 사용하는 용어의 정의는 아래와 같습니다. 본 약관에 명시되지 않은 용어는 관련 법령이 정하는 바에 따르며, 그 외에는 일반적인 상거래관행에 의합니다.
1. "서비스"란 PC, 휴대용 단말기 등 각종 유무선 기기 또는 프로그램을 통하여 이용할 수 있도록 "회사"가 제공하는 모든 인터넷 서비스를 말하며, "회사"가 공개한 API를 이용하여 제3자가 개발
   또는 구축한 프로그램이나 서비스를 통하여 이용 고객 또는 회원에게 제공되는 경우를 포함합니다.
2. "회원"이란 서비스를 이용하기 위하여 동 약관에 동의하거나 네이버, 카카오 등 연동 된 서비스를 통해 "회사"와 이용 계약을 체결한 자를 말합니다.
3. ‘회원’이란 회사에 추가적인 개인정보를 제공하여 회사가 진행하는 서비스에 멘토로 참여 신청, 회사의 심사를 통해 선발되어, 경험과 지혜 공유 계약을 체결한 자를 의미합니다.
4. "아이디"라 함은 회원의 식별과 회원의 서비스 이용을 위하여 "회원"이 가입 시 선정한 문자와 숫자의 조합을 말합니다.
5. "비밀번호"라 함은 "회사"의 서비스를 이용하려는 사람이 아이디를 부여 받은 자와 동일인임을 확인하고 "회원"의 권익을 보호하기 위하여 "회원"이 선정한 문자와 숫자의 조합을 말합니다.
6. "비회원"이라 함은 "회원"에 가입하지 않고 "회사"가 제공하는 서비스를 이용하는 자를 말합니다.

제3조 약관의 명시와 개정
1. "회사"는 이 약관의 내용과 상호, 영업소 소재지, 대표자의 성명, 사업자등록번호, 연락처 등을 "회원"이 알 수 있도록 초기 화면에 게시하거나 기타의 방법으로 "회원"에게 공지해야 합니다.
2. "회사"는 약관의규제관한법률, 전기통신기본법, 전기통신사업법, 정보통신망법, 통신비밀보호법 등 관련법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
3. “회사”가 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행 약관과 함께 그 개정약관의 적용일자 7일 전부터 적용일자 전일까지 공지합니다. 다만, “회원”에게 불리한 약관 개정의
   경우에는 적용일자 30일 이전부터 공지합니다.
4. 제3항에 따라 공지된 적용일자 이후에 회원이 회사의 서비스를 계속 이용하는 경우에는 개정된 약관에 동의하는 것으로 봅니다. 개정된 약관에 동의하지 아니하는 회원은 언제든지 자유롭게
   서비스 이용계약을 해지할 수 있습니다.
5. "회원"이 개정약관의 적용에 동의하지 않는 경우 "회사"는 개정 약관의 내용을 적용할 수 없으며, 이 경우 "회원"은 이용계약을 해지할 수 있습니다. 다만, 기존 약관을 적용할 수 없는 특별한
   사정이 있는 경우에는 "회사"는 이용계약을 해지할 수 있습니다.

제4조 약관의 해석
1. 이 약관에서 규정하지 않은 사항에 관해서는 약관의규제에관한법률, 전기통신기본법, 정보통신망법 등의 관계법령 또는 상관례에 따릅니다.
2. "회원"이 "회사"와 개별 계약을 체결하여 서비스를 이용하는 경우에는 개별 서비스 계약이 우선합니다.

제5조 이용계약의 성립
1. "회사"의 서비스 이용계약(이하 "이용계약")은 "회원"이 되고자 하는 자(이하 "가입신청자")가 본 약관과 개인정보처리방침을 읽고 그 내용에 대하여 동의를 한 다음 회원가입 신청을 하고 "회사"가
   이러한 신청에 승낙함으로써 성립됩니다.
2. 제1항 신청에 있어 "회사"는 "회원"의 종류에 따라 전문기관을 통한 실명확인 및 본인인증을 요청할 수 있습니다. "회원"은 본인 인증에 필요한 이름, 생년월일, 연락처 등을 제공하여야 합니다.
3. 페이스북, 네이버, 카카오, 구글 등 외부 서비스와의 연동을 통해 이용계약을 신청할 경우, 본 약관과 개인정보처리방침, 서비스 제공을 위해 "회사"의 "가입신청자"의 외부 서비스 계정 정보 접근 및
   활용에 "동의" 또는 "확인" 버튼을 누르면 "회사"가 승낙함으로써 이용계약이 성립됩니다.

제6조 (이용신청의 승낙과 제한)
1. "회사"는 전조의 규정에 의한 "가입신청자"의 가입신청에 대하여 업무수행상 또는 기술상 지장이 없는 경우에는 원칙적으로 접수 순서에 따라 서비스 이용을 승낙합니다.
2. "회사"는 아래 사항에 해당하는 경우에 대해서는 이용 신청을 승낙하지 않습니다.
  ① 실명이 아니거나 타인의 명의를 이용하여 신청한 경우
  ② 이용계약 신청서의 내용을 허위로 기재한 경우
  ③ 기타 회사가 정한 이용신청 요건이 미비 되었을 경우
3. "회사"는 아래 사항에 해당하는 경우에는 그 신청에 대하여 승낙 제한 사유가 해소될 때까지 승낙을 유보할 수 있습니다.
  ① "회사"가 설비의 여유가 없는 경우
  ② "회사"의 기술상 지장이 있는 경우
  ③ 기타 "회사"의 귀책 사유로 이용 승낙이 곤란한 경우

제7조 (서비스의 내용)
1. "회사"가 "회원"에게 제공하는 서비스의 내용은 다음 각 호와 같습니다.
  ① 멘토 프로필 조회 서비스
  ② 1:1, 그룹 멘토링 서비스
  ③ 직무, 취업 스터디 서비스
  ④ 콘텐츠 조회, 구독 서비스
  ⑤ 멘토 에세이 서비스
  ⑥ 이용자 간의 교류와 소통에 관련한 서비스
  ⑦ 기타 "회사"가 추가 개발하거나 제휴 계약 등을 통해 "회원"에게 제공하는 일체의 서비스
2. "회사"는 필요한 경우 서비스의 내용을 추가 또는 변경할 수 있습니다. 단, 이 경우 "회사"는 추가 또는 변경내용을 "회원"에게 공지해야 합니다.

제8조 (서비스 이용시간)
1. "회사"는 특별한 사유가 없는 한 연중무휴, 1일 24시간 서비스를 제공합니다. 다만, "회사"는 서비스의 종류나 성질에 따라 제공하는 서비스 중 일부에 대해서는 별도로 이용시간을 정할 수 있으며,
   이 경우 "회사"는 그 이용시간을 사전에 "회원"에게 공지 또는 통지하여야 합니다.
2. "회사"는 자료의 가공과 갱신을 위한 시스템 작업시간, 장애해결을 위한 보수작업 시간, 회선 장애 등이 발생한 경우 일시적으로 서비스를 중단할 수 있으며 계획된 작업의 경우 공지란에 서비스 중단
   시간과 작업 내용을 알려야 합니다.

제9조 (서비스 제공의 중지)
"회사"는 다음 각 호에 해당하는 경우 서비스의 제공을 중지할 수 있습니다
1. 설비의 보수 등 "회사"의 필요에 의해 사전에 "회원"들에게 통지한 경우
2. 기간통신사업자가 전기통신서비스 제공을 중지하는 경우
3. 기타 불가항력적인 사유에 의해 서비스 제공이 객관적으로 불가능한 경우

제10조 ("회원"에 대한 통지와 공지)
1. "회사"가 "회원"에 대한 통지를 하는 경우 이 약관에 별도 규정이 없는 한 회원의 등록된 전자우편 주소로 이메일을 통하여 할 수 있습니다.
2.  "회사"는 "회원" 전체에 대한 통지의 경우 7일 이상 "회사"의 공지란에 공지하거나 서비스 첫 화면에 게시함으로써 제1항의 통지에 갈음할 수 있습니다.</string>

    <string name="agree2">1.개인정보의 수집 및 이용 목적
  직무직식 거래매칭 시스템 사이트인 만나JOB(이하 "서비스"라 한다)는 효과적인 정보 공유에 적합한 서비스를 제공하기 위하여 개인정보를 수집하고 있으며 수집된 정보를 아래와 같이 이용하고
  있습니다. 이용자가 제공한 모든 정보는 하기 목적에 필요한 용도 이외로는 사용되지 않으며 이용 목적이 변경될 시에는 사전 동의를 구할 것입니다.

  ① 회원관리
    회원제 서비스 이용에 따른 본인확인, 본인의 의사확인, 고객문의에 대한 응답, 새로운 정보의 소개 및 고지사항 전달
  ② 서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산
    본인인증 및 컨텐츠 제공을 위한 개인식별, 회원간의 상호 연락 및 각종 맞춤형 서비스 제공, 구매 및 요금 결제, 물품 및 증빙발송, 부정 이용방지와 비인가 사용방
  ③ 서비스 개발 및 마케팅ᆞ광고에의 활용
    맞춤 서비스 제공, 서비스 안내 및 이용권유, 서비스 개선 및 신규 서비스 개발을 위한 통계 및 접속빈도 파악, 통계학적 특성에 따른 광고 게재, 이벤트 정보 및 참여기회 제공
  ④ 고용 및 취업동향 파악을 위한 통계학적 분석

2. 개인정보 수집 항목
  ① 회원 : 아이디, 비밀번호, 성명, 연락처, 사진, 이메일 등 회원가입에 기재된 정보 또는 신청자가 제공한 정보
  ② 현직자 추가 항목 : 회사명, 부서, 직위, 직무, 사진, 증명서, 경력, 소개 등 현직자 지원에 기재된 정보 또는 신청자가 제공한 정보
  ③ 모바일 서비스의 특성상 단말기 모델 정보가 수집될 수 있으나, 이는 개인을 식별할 수 없는 형태입니다.

3.개인정보의 보유 및 이용기간
  "서비스"는 회원가입일로부터 서비스를 제공하는 기간 동안에 한하여 이용자의 개인정보를 보유 및 이용하게 됩니다. 회원탈퇴를 요청하거나 개인정보의 수집 및 이용에 대한 동의를 철회하는 경우,
  수집 및 이용목적이 달성되거나 이용기간이 종료된 경우 개인정보를 지체 없이 파기합니다. 단, 다음의 경우에 대해서는 각각 명시한 이유와 기간 동안 보존합니다.

  ① 상법 등 관계법령의 규정에 의하여 보존할 필요가 있는 경우 법령에서 규정한 보존기간 동안 거래내역과 최소한의 기본정보를 보유합니다.
    이 경우 회사는 보관하는 정보를 그 보관의 목적으로만 이용합니다.
    -계약 또는 청약철회 등에 관한 기록: 5년
    -대금결제 및 재화 등의 공급에 관한 기록: 5년
    -소비자의 불만 또는 분쟁처리에 관한 기록: 3년
    -부정이용 등에 관한 기록: 5년

4."회사"는 정보통신망 이용촉진 및 정보보호 등에 관한 법률 제29조 제2항, 동법 시행령 제16조에 따라 1년 동안 만나JOB 서비스를 이용하지 않은 휴면이용자의 개인정보 처리와 관련하여
    정보통신망 이용촉진 및 정보보호 등에 관한 법률 기타 관련 법령을 준수합니다. 다만, 보유기간을 미리 공지하고 그 보유기간이 경과하지 아니한 경우와 개별적으로 동의를 받은 경우에는
    약정한 기간 동안 보유합니다.</string>
    <string name="qnacategoryb">매칭</string>
    <string name="qnacategoryc">현직자</string>
    <string name="qnacategoryd">취준생</string>
    <string name="qnacategorye">운영</string>
    <string name="qnacategoryq">일정</string>
    <string name="qnacategoryx">기타</string>
</resources>